--- a/tutor/resources/styles/book-content/base.less
+++ b/tutor/resources/styles/book-content/base.less
@@ -60,14 +60,13 @@ figure {
   &.full-width:not(.splash) {
     width: 100%;
   }
-  &.tutor-ui-vertical-img {
+  &.tutor-ui-vertical-img,
+  &.tutor-ui-horizontal-img {
     @media (min-width: @screen-sm-min) {
-      width: 50%;
+      clear: both;
       float: left;
     }
   }
-
-  img { width: 100%; }
 
   figcaption {
     border-bottom: 1px solid;
