set line-height

--- a/tutor/src/screens/surveys/styles.scss
+++ b/tutor/src/screens/surveys/styles.scss
@@ -66,6 +66,7 @@
   .sv_q_title {
     font-size: 1.6rem;
     font-weight: normal;
+    line-height: 2.4rem;
     margin-bottom: 20px;
     color: $tutor-neutral-darker;
   }
