--- a/exercises/resources/styles/app.scss
+++ b/exercises/resources/styles/app.scss
@@ -22,6 +22,7 @@ $rw-img-path: '~react-widgets/dist/img';
 
 @import '../../../shared/resources/styles/main.scss';
 
+@import '~bootstrap/dist/css/bootstrap.min.css';
 
 @import "global/defaults";
 @import "global/widgets";
@@ -32,6 +33,8 @@ $rw-img-path: '~react-widgets/dist/img';
 @import "./vocabulary";
 @import './tags';
 @import './preview';
+
+@import './../../src/components/qk/qkstyles.scss';
 
 .exercises-body {
   margin-top: 60px;
