--- a/exercises/src/components/qk/qkstyles.scss
+++ b/exercises/src/components/qk/qkstyles.scss
@@ -1,10 +1,10 @@
 @import './qk.css';
-@import './controls/controls.scss';
-@import './elements/QuestionCards.css';
-@import './elements/SideBar.css';
-@import './elements/Tags.css';
-@import './help/Help.css';
-@import './newquestion/NewQuestion.css';
-@import './questiondetail/QuestionDetail.css';
-@import './questionroute/Questions.css';
-@import './subjectpicker/SubjectPicker.css';
+@import './controls/controls';
+@import './elements/QuestionCards';
+@import './elements/SideBar';
+@import './elements/Tags';
+@import './help/Help';
+@import './newquestion/NewQuestion';
+@import './questiondetail/QuestionDetail';
+@import './questionroute/Questions';
+@import './subjectpicker/SubjectPicker';
