--- a/exercises/src/components/qk/qkstyles.scss
+++ b/exercises/src/components/qk/qkstyles.scss
@@ -1,5 +1,6 @@
 @import './qk.css';
 @import './controls/controls';
+@import './profile/Profile';
 @import './elements/QuestionCards';
 @import './elements/SideBar';
 @import './elements/Tags';
