--- a/exercises/resources/styles/app.scss
+++ b/exercises/resources/styles/app.scss
@@ -26,6 +26,10 @@ $rw-img-path: '~react-widgets/dist/img';
   padding: 0;
   @import '~bootstrap/dist/css/bootstrap.min';
   @import './../../src/components/qk/qkstyles';
+
+  .subject-card > .forum.card-body:hover {
+    box-shadow: 4px 4px 8px rgba(0,0,0,0.1);
+  }
 }
 
 @import "global/defaults";
@@ -38,7 +42,14 @@ $rw-img-path: '~react-widgets/dist/img';
 @import './tags';
 @import './preview';
 
-.exercises-body {
-  margin-top: 60px;
+.exercises.container-fluid {
+  padding: 0;
+}
 
+.exercises-body {
+  margin-top: 120px;
+}
+
+body {
+  overflow-x: hidden;
 }
