--- a/exercises/src/components/qk/controls/controls.scss
+++ b/exercises/src/components/qk/controls/controls.scss
@@ -4,6 +4,11 @@
   align-items: center;
 }
 
+nav.navbar {
+  position: fixed;
+  width: 100vw;
+}
+
 .nav-item{
   text-align: center;
   cursor: pointer;
