--- a/exercises/src/components/qk/profile/Profile.css
+++ b/exercises/src/components/qk/profile/Profile.css
@@ -12,3 +12,10 @@ h5.card-title {
 h5.card-title + p.card-text {
   text-align: center;
 }
+
+
+.tab-pane .announce {
+  text-align: center;
+  font-size: 40px;
+  margin: 1em;
+}
