--- a/shared/resources/styles/components/spy-mode.scss
+++ b/shared/resources/styles/components/spy-mode.scss
@@ -11,7 +11,7 @@
         border: 1px solid;
         padding: 5px;
         border-radius: 4px;
-        margin: 5px 0;
+        margin: 5px;
       }
     }
   }
